--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,12 +94,25 @@
     <!-- The company name -->
     <string name="company_name">LaurCode</string>
 
+    <!-- Common -->
+    <string name="try_again">Try Again</string>
+    <string name="syncing_data">Syncing data…</string>
+
     <!-- Black Friday hint -->
     <string name="black_friday_hint">Pssst, <b>Black Friday</b> is around the corner</string>
     <string name="black_friday_hint_hint">Click to take a peek</string>
     <string name="black_friday_deals">Black Friday Special Deals</string>
     <string name="black_friday_url_hint">Have a looky here:</string>
 
+    <!-- Errors -->
+    <string name="error_loading_photos">There was an error loading images from the server.</string>
+
+    <!-- Buttons -->
+    <string name="lets_go">Let\'s go!</string>
+
     <!-- Content descriptions -->
     <string name="content_description_image_black_friday_deals">This image is what you press if you want to see the Black Friday deals.</string>
+    <string name="content_description_image_press_me_arrow">This image indicates where you must press to continue after data is synced.</string>
+    <string name="content_description_evolution_image">An image showing the evolution of man from ape with a simple tool like a stick to man with a digital tool.</string>
+    <string name="click_me_to_continue">Click this guy to continue</string>
 </resources>
