Trying to get DataBindingAdapters to work again, no idea why it's not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Retire</string>
+
+    <!-- Splash -->
+    <string name="splash_caption">In Comfort</string>
+    <string name="splash_button_text">SHOW ME HOW</string>
 </resources>
